--- a/Files/Views/Folders/Index.cshtml
+++ b/Files/Views/Folders/Index.cshtml
@@ -15,9 +15,12 @@
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
-           @* <th>
-                @Html.DisplayNameFor(model => model.FolderId)
-            </th>  *@        
+            @* <th>
+            @Html.DisplayNameFor(model => model.FolderId)
+            </th>  *@
+            <th>
+                Archivos
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.DateRegistration)
             </th>
@@ -25,23 +28,28 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-           @* <td>
-                @Html.DisplayFor(modelItem => item.FolderId)
-            </td> *@        
-            <td>
-                @Html.DisplayFor(modelItem => item.DateRegistration)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Detalles</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Borrar</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                @* <td>
+            @Html.DisplayFor(modelItem => item.FolderId)
+            </td> *@
+                <td>
+                    @item.ListArchives.Count()
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DateRegistration)
+                </td>
+                <td>
+                    <a asp-action="Create" asp-route-folderId="@item.Id" asp-controller="Archives">Agregar archivo</a> |
+                    <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Detalles</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Borrar</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
