--- a/Files/Views/Home/Privacy.cshtml
+++ b/Files/Views/Home/Privacy.cshtml
@@ -1,9 +1,13 @@
 ﻿@{
     ViewData["Title"] = "Acerca de";
 }
-<h1>@ViewData["Title"]</h1>
+<h1 class="text-info">@ViewData["Title"]</h1>
 
-<h2>Misión, visión y valores</h2>
+<div class="text-center">
+   <img src="~/img/TechSide.PNG"/>
+</div>
+
+<h2 class="text-info">Misión, visión y valores</h2>
 <p>
     TechSide es una compañía de base tecnológica y de seguridad de la información,
     enfocada en generar valor a sus clientes, impulsando el cumplimiento de sus
