--- a/Files/Views/Users/Create.cshtml
+++ b/Files/Views/Users/Create.cshtml
@@ -1,12 +1,12 @@
 ﻿@model Files.Models.User
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Usuarios";
 }
 
-<h1>Create</h1>
+<h1>Agregar nuevo</h1>
 
-<h4>User</h4>
+<h4>Usuario</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -32,25 +32,23 @@
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsActive" /> @Html.DisplayNameFor(model => model.IsActive)
-                </label>
-            </div>
             <div class="form-group">
-                <label asp-for="DateRegistration" class="control-label"></label>
-                <input asp-for="DateRegistration" class="form-control" />
-                <span asp-validation-for="DateRegistration" class="text-danger"></span>
+                <label asp-for="RoleId" class="control-label"></label>
+                <select asp-for="RoleId" class="form-control" asp-items="@ViewBag.ListRoles">
+                    <option value="">Seleccione</option>
+                </select>
+                <span asp-validation-for="RoleId" class="text-danger"></span>
             </div>
+
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Regresar a la lista</a>
 </div>
 
 @section Scripts {
