--- a/Files/Views/Users/Delete.cshtml
+++ b/Files/Views/Users/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model Files.Models.User
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Usuario";
 }
 
-<h1>Delete</h1>
+<h1>Borrar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Desea borrar?</h3>
 <div>
-    <h4>User</h4>
+    <h4>Usuario</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -36,12 +36,6 @@
             @Html.DisplayFor(model => model.Password)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsActive)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsActive)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DateRegistration)
         </dt>
         <dd class = "col-sm-10">
@@ -51,7 +45,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Borrar" class="btn btn-danger" /> |
+        <a asp-action="Index">Regresar a la lista</a>
     </form>
 </div>
